--- a/src/components/Board/Board.scss
+++ b/src/components/Board/Board.scss
@@ -5,11 +5,16 @@
   flex-basis: 15%;
   height: min-content;
 
+  &:hover .board__sort {
+    display: block;
+  }
+
   &__header {
     background-color: #2b9348;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    gap: 5px;
     padding: 5px;
 
     &__title {
@@ -24,6 +29,16 @@
     }
   }
 
+  &__sort {
+    padding: 5px;
+    text-align: center;
+    display: none;
+
+    &-title {
+      margin-right: 5px;
+    }
+  }
+
   &__no-list {
     padding: 5px;
     font-style: italic;
@@ -35,4 +50,7 @@
     gap: 5px;
     padding: 5px;
   }
+}
+.radiobuttons {
+  display: inline;
 }
