--- a/src/components/NewCard/NewCard.scss
+++ b/src/components/NewCard/NewCard.scss
@@ -1,37 +1,33 @@
 .newCard {
-  position: fixed; 
+  position: fixed;
   z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.4);
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 
   &__content {
-      background-color: #E7EB00;
-      margin: 15% auto;
-      padding: 20px;
-      border: 1px solid #888;
-      width: 40%;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      align-items: center;
+    background-color: #e7eb00;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
 
-      &__header {
-
-      }
-
-      &__buttons {  
-        padding-top: 10px;
-        text-align: center;
-      }
+    &__buttons {
+      padding-top: 10px;
+      text-align: center;
+    }
   }
 }
 
-.buttons {  
+.buttons {
   padding-top: 10px;
   text-align: center;
 
@@ -39,7 +35,8 @@
     background-color: #657514;
     margin-right: 5px;
 
-    &:hover, :focus{
+    &:hover,
+    :focus {
       transform: scale(105%);
     }
   }
@@ -47,7 +44,8 @@
   &__cancel {
     background-color: #dae892;
 
-    &:hover, :focus{
+    &:hover,
+    :focus {
       transform: scale(105%);
     }
   }
